// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Quickview button default render 1`] = `
<span
  data-for="table-tooltip"
>
  <button
    className="btn-table"
    onClick={[Function]}
    type="button"
  >
    <i />
  </button>
</span>
`;

exports[`Quickview button disabled render 1`] = `
<span
  data-for="table-tooltip"
>
  <button
    className="btn-table"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <i />
  </button>
</span>
`;

exports[`Quickview button on click callback render 1`] = `
<span
  data-for="table-tooltip"
>
  <button
    className="btn-table"
    onClick={[Function]}
    type="button"
  >
    <i />
  </button>
</span>
`;

exports[`Quickview button render with a view 1`] = `
<span
  data-for="table-tooltip"
  data-tip="foo"
>
  <button
    className="btn-table"
    onClick={[Function]}
    type="button"
  >
    <i
      className={<i />}
    />
  </button>
</span>
`;
